added form enhancement

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -607,3 +607,189 @@ html {
     font-size: 3.5rem !important;
   }
 }
+
+/* ========== HERO BACKGROUND ELEMENTS A
+  }
+}
+ant;x !importheight: 80p  
+  .hero-wave {}
+  
+  
+  y: none;la
+    disppattern {
+  .dots-  }
+  ay: none;
+ispl {
+    d-3ero-circle
+  
+  .htant;
+  }!impor100px left: -   
+ ortant; !impom: -100pxbottant;
+    px !import 300ight:  hent;
+  px !importah: 300widt  rcle-2 {
+  ci .hero- }
+  
+ ant;
+ x !importight: -50p rortant;
+   50px !imptop: -  t;
+  ortanimpht: 250px !    heigimportant;
+: 250px !{
+    widtho-circle-1 
+  .her 768px) {max-width:
+@media (
+3;
+  }
+}ity: 0.pac{
+    oero-shape 
+  .h
+  }
+  ;splay: none di {
+   oating-icon  .fl
+  
+}: 0.5;
+  tyopacie-3 {
+    o-circl-2,
+  .herhero-circle
+  .e-1,-circl.hero{
+  : 992px) thax-wid
+@media (mements */d elounackgrr bts fostmendjuve asiespon
+/* R}
+  }
+ Z");
+0,120 L0,1202050 L10 T1200,0 600,5300,10h("M0,50 Q  d: pat{
+    }
+  50% ;
+0,120 Z") L1200,120 LT1200,50,0 600,50 "M0,50 Q300th(  d: pa
+    0%, 100% {
+e-motion {ames waveyfr@k
+}
+
+nite;out infie-in-s easotion 8: wave-mimation an path {
+ hero-wavemation */
+.* Wave Ani
+/  }
+}
+ity: 0.8;
+opac.5);
+    : scale(1formtrans50% {
+     }
+  
+ ty: 0.3; opaci  cale(1);
+ transform: s00% {
+     {
+  0%, 1se-dotes puleyfram
+@k 1.1s; }
+ation-delay:) { animild(12:nth-chdiv divttern dots-pa}
+.: 1s; ion-delay1) { animatth-child(1:nv divtern di
+.dots-paty: 0.9s; }elaation-d(10) { animnth-childv div: dis-pattern; }
+.dot: 0.8slaydenimation- ahild(9) {iv div:nth-crn dts-patte
+.do 0.7s; }y:on-delaati(8) { anim-childnth div: divttern
+.dots-pa }0.6s;lay: tion-demald(7) { aniv:nth-chiv ditern di}
+.dots-patay: 0.5s; -del{ animationchild(6)  div:nth-n divter
+.dots-pat } 0.4s;n-delay:imatiohild(5) { an div:nth-cdivttern  }
+.dots-pa0.3s;: on-delayti animaild(4) { div:nth-chrn divttedots-pa}
+.2s;  0.delay:ion-nimat { aild(3)v div:nth-chrn diatte
+.dots-p 0.1s; }tion-delay:ima) { anild(2v:nth-chtern div di}
+.dots-pat-delay: 0s; onti animald(1) {hi div:nth-c-pattern div
+}
+
+.dotsnfinite;se-in-out i2s eadot se-n: pul
+  animatio{ div tern div/
+.dots-pat *ationattern Animts PDo
+/* }
+ }
+;
+ pacity: 0.25
+    oale(1.2);: scorm   transf0% {
+  5
+  }
+ city: 0.15; opa   le(1);
+sca:  transform
+   100% {
+  0%, hape {-smes pulseraeyf
+
+@k}deg);
+  }
+(360tem: rotaransfor
+    t 100% {eg);
+  }
+ (0datem: rotransfor{
+    t0% shape {
+  tate-yframes roe;
+}
+
+@kenfinitout i 3s ease-in-pe-shaon: pulseanimatild(8) {
+  hihape:nth-c-sero.hite;
+}
+
+ear infin linate-shape 8sion: rotmate {
+  ani
+.hero-shapmation */ Shapes Animetric
+}
+
+/* Geo5deg);
+  }otate((-20px) rranslateY trm:sfoan  tr {
+  
+  50%);
+  }degotate(0x) rateY(0ptranslform: ans
+    tr0%, 100% {{
+  at-icon frames flo;
+}
+
+@key 1.5stion-delay:nima6) {
+  ad(hiln:nth-cfloating-ico
+}
+
+. 2s;tion-delay:anima5) {
+  ild(nth-chg-icon:loatin.f: 1s;
+}
+
+tion-delay
+  anima {th-child(4)n:nng-ico.floati;
+}
+
+niten-out infin 4s ease-it-icoation: floa animcon {
+ ing-iat */
+.flos Animationng Iconatilo
+
+/* F  }
+}.1);
+px) scale(1(-15px, 15ranslatem: toransf tr {
+   
+  }
+  50%le(1);e(0, 0) sca: translatnsform {
+    tra0%, 10 0%{
+ ircle-3 ames float-cyfr}
+
+@ke  }
+8);
+) scale(1.0e(30px, 30px: translatormnsf {
+    tra0%
+  }
+  5e(1);scale(0, 0) slatsform: trantran {
+    00%
+  0%, 1circle-2 { float-@keyframes
+  }
+}
+
+(1.05); scale, -20px)0pxnslate(-2transform: ra   t50% {
+ 
+  }
+  scale(1); 0) ate(0,slorm: tranransf00% {
+    t1 {
+  0%, 1at-circle-eyframes floe;
+}
+
+@kout infinits ease-in-cle-3 6-ciration: floatanimcle-3 {
+  irro-c.hee;
+}
+
+ infinit-oute-ineas0s t-circle-2 1 floanimation:
+  a{-circle-2 
+.hero
+}
+ite;fint ins ease-in-out-circle-1 8mation: floa
+  ani {circle-1.hero-tion */
+rcles Animaating CiFlo/* 
+
+= */== =======NIMATIONS
