--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -4,9 +4,10 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-logomodern-business-nav/blob/master/LICENSE)
  */
 body {
-  padding-top: 85px;
+  padding-top: 56px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   overflow-x: hidden;
+  margin: 0;
 }
 
 .carousel-item {
